<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvProductName"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.makeramen.roundedimageview.RoundedImageView
                    app:riv_corner_radius="30dip"
                    app:riv_border_width="1dip"
                    app:riv_oval="false"
                    app:riv_border_color="@color/md_red_200"
                    android:id="@+id/ivAvatar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_action_user"/>
                <TextView
                    android:layout_toRightOf="@id/ivAvatar"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    style="@style/FullNameUser"
                    android:layout_weight="3"
                    android:id="@+id/tvProducer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_phone"/>
                <TextView
                    android:paddingTop="5dp"
                    android:layout_toRightOf="@+id/ivPhone"
                    android:id="@+id/tvPhonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumber"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </RelativeLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_location"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_toRightOf="@+id/ivLocation"
                android:id="@+id/tvProductOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_user"
                android:textAppearance="?android:textAppearanceMedium"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivProductImage"
            android:scaleType="fitXY"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/im_placeholder"
            />
        <LinearLayout
            android:gravity="center"
            android:background="@color/md_red_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/ivProductImage">
            <TextView
                android:gravity="center"
                android:id="@+id/tvOrderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/md_red_400"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/md_red_400"
                    android:paddingTop="5dp"
                    android:layout_toRightOf="@+id/ivOrder"
                    android:id="@+id/tvNameProductOrder"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_count"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginRight="2dp"
                    />
                <TextView
                    android:textColor="@color/md_red_400"
                    android:paddingTop="5dp"
                    android:layout_toRightOf="@+id/tvNameProductOrder"
                    android:id="@+id/tvProductOrder"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_count"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RelativeLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textColor="@color/md_red_400"
                android:id="@+id/tvDescription"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textAppearance="?android:textAppearanceMedium"
              />
        </ScrollView>

        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:background="@drawable/border_button"
            android:gravity="center"
           android:layout_margin="5dp"
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_accept"
            android:layout_weight="1"/>
        <android.support.v7.widget.AppCompatButton
            android:background="@drawable/border_button"
            android:gravity="center"
            android:layout_margin="5dp"
            android:id="@+id/btnNotAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_notaccept"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>