<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ogaga.flash.acitivies.SellActivity">

    <!-- The ActionBar displayed at the top-->
    <include
        layout="@layout/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="@dimen/margin_image"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/ivAvatar"
                style="@style/ivAvatarUp"
                android:padding="5dp"
                android:contentDescription="@string/imageDescription"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivAvatar"
            android:visibility="invisible"
            android:id="@+id/tvErrorAvatar"
            android:textColor="@color/md_red_400"
            android:text="error"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/camera"
            android:id="@+id/btnChooseImage"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ivAvatar"
            android:layout_toEndOf="@+id/ivAvatar" />
    </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/input"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:id="@+id/tilProductname">
            <EditText
                style="@style/input"
                android:id="@+id/etProductname"
                android:hint="@string/product_name"/>
            </android.support.design.widget.TextInputLayout>

    <Spinner
        style="@style/input"
        android:textAlignment="gravity"
        android:gravity="center"
        android:id="@+id/spProductType"/>
        <android.support.design.widget.TextInputLayout
            style="@style/input"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:id="@+id/tilProductPrice">
            <EditText
                style="@style/input"
                android:inputType="number"
                android:id="@+id/etProductPrice"
                android:hint="@string/product_price"/>
            </android.support.design.widget.TextInputLayout>

    <Spinner
        style="@style/input"
        android:id="@+id/spProductUnit"/>
    <Spinner
        style="@style/input"
        android:id="@+id/spProductStatus"/>
        <android.support.design.widget.TextInputLayout
            style="@style/input"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:id="@+id/tilDateStart">
            <EditText
                android:inputType="date"
                style="@style/input"
                android:hint="@string/product_startat"
                android:id="@+id/etDateStart"/>
            </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/input"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:id="@+id/tilDateFinished">
            <EditText
                android:inputType="date"
                style="@style/input"
                android:hint="@string/product_finished_date"
                android:id="@+id/etDateFinished"
                />
            </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/input"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:id="@+id/tilDescription">
            <EditText
                style="@style/input"
                android:maxLength="350"
                android:maxLines="5"
                android:lines="2"
                android:hint="@string/order_description"
                android:gravity="top"
                android:id="@+id/etDesciption"/>
        </android.support.design.widget.TextInputLayout>
    <Button
        style="@style/submit"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/create"
        android:id="@+id/btnSubmit"/>
    </LinearLayout>
</LinearLayout>
